<resources>
    <string name="app_name">Menu</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_category">Category</string>
    <string name="title_activity_item__display">Item_Display</string>
    <string name="title_activity_order_list">OrderList</string>
    <string name="title_activity_add_menu_details">AddMenuDetails</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="title_activity_delete_item">DeleteItemActivity</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>
    <string name="title_activity_customer_order">CustomerOrderActivity</string>
    <string name="add_menu_category_name">CATEGORY NAME</string>
    <string name="item_name">ITEM NAME</string>
    <string name="item_price">ITEM PRICE</string>
    <string name="price">PRICE</string>
    <string name="nos">NOS</string>
    <string name="total">TOTAL  :</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="count">COUNT</string>
    <string name="rs">Rs/-</string>
    <string name="Total">TOTAL  :   %1$s  Rs/-</string>

</resources>




