<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.CustomerOrderActivity"
    tools:showIn="@layout/activity_customer_order">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">




        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/textView9"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/item_name"
            style="@style/Basecolor"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/textView10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/price"
            style="@style/Basecolor"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/textView11"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/nos"
            style="@style/Basecolor"
            android:textColor="#ffffff" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:id="@+id/orderCusListView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.92" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTotal"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2.19"
        style="@style/Basecolor"
        android:textColor="#ffffff"
        android:gravity="center_vertical|center_horizontal" />



</LinearLayout>
