<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ItemDisplayActivity"
    tools:showIn="@layout/activity_item__display"
    >

    <TextView

        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@string/order_details"
        android:id="@+id/textView6"
        android:gravity="center_vertical"
        android:textSize="25dp"
        android:textColor="#ffffff"
        style="@style/Basecolor"
        android:paddingLeft="10dp" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

          <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="80dp">

              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:text="@string/item_name"
                  android:id="@+id/textView4"
                  android:gravity="center_vertical"
                  android:textSize="20dp" />

              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:id="@+id/textItemname"
                  android:gravity="center_vertical|center_horizontal"
                  android:textSize="20dp" />
          </LinearLayout>

          <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="80dp"

              android:layout_gravity="center_horizontal">

              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:text="@string/item_price"
                  android:id="@+id/textView7"
                  android:gravity="center_vertical"
                  android:textSize="20dp" />

              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:id="@+id/textItemprice"
                  android:gravity="center_vertical|center_horizontal"
                  android:textSize="20dp" />
          </LinearLayout>

          <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1">

              <TextView
                  android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:text="@string/count"
                  android:id="@+id/textView5"
                  android:gravity="center_vertical"
                  android:textSize="20dp" />

              <NumberPicker
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:id="@+id/numberPicker">

              </NumberPicker>

       </LinearLayout>



  </LinearLayout>



    </ScrollView>

</LinearLayout>
