<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddMenuDetailsActivity"
    tools:showIn="@layout/activity_add_menu_details">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
           >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/add_menu_category_name"
                android:id="@+id/textView4"
                android:gravity="center_vertical"
                android:textSize="20dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/itemCategory"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
           >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/item_name"
                android:id="@+id/textView7"
                android:gravity="center_vertical"
                android:textSize="20dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/itemName"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/item_price"
                android:id="@+id/textView8"
                android:gravity="center_vertical"
                android:textSize="20dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/itemPrice"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20dp"
                android:inputType="phone"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

    </LinearLayout>

</LinearLayout>

    <!--  <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        >

        <Button
        android:layout_width="0dp"
            android:layout_weight="1"
        android:layout_height="80dp"
        android:text="ADD IMAGE"
        android:id="@+id/imageButton"
        android:layout_gravity="center_horizontal|bottom"
        style="@style/Basecolor"
        android:textColor="#ffffff" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.10"></LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="DONE"
            android:id="@+id/doneButton"
            style="@style/Basecolor"
            android:textColor="#ffffff"
            android:layout_gravity="bottom" />
    </LinearLayout>-->


